community/khal: upgrade to 0.13.0

--- a/community/khal/APKBUILD
+++ b/community/khal/APKBUILD
@@ -1,15 +1,14 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 maintainer="Hugo Osvaldo Barrera <hugo@whynothugo.nl>"
 pkgname=khal
-pkgver=0.11.3
-pkgrel=3
+pkgver=0.13.0
+pkgrel=0
 pkgdesc="CLI calendar application build around CalDAV"
 url="https://lostpackets.de/khal"
 arch="noarch"
 license="MIT"
 options="net"
 depends="
-	py3-atomicwrites
 	py3-click
 	py3-click-log
 	py3-configobj
@@ -37,10 +36,7 @@ subpackages="
 	$pkgname-zsh-completion
 	$pkgname-fish-completion
 	"
-source="https://files.pythonhosted.org/packages/source/k/khal/khal-$pkgver.tar.gz
-	fix-doc-intersphinx-mapping.patch
-	0001-support-icalendar-6.0.0.patch
-	"
+source="https://files.pythonhosted.org/packages/source/k/khal/khal-$pkgver.tar.gz"
 case "$CARCH" in
 s390x)
 	# E AssertionError: assert '09:30-10:30: Great Event' in ''
@@ -83,7 +79,5 @@ package() {
 }
 
 sha512sums="
-1f7f82e04ad913df9e2e4bd315a70b9832b1af3f6d2db794018c780645f5bdb6df39efb45a36b38e3c1327932a1cb91d4c735f578b29a9326ef0f163fecd7bba  khal-0.11.3.tar.gz
-6d076eaa73274d360f89e2fba7a3cfcfb655a0f101ecc6ad6636d0d9fadc68c6caba9c51cf6229f7994677eb6e5e68c0dd5b17c4c7e437f4b5e543c4ff3c9ad0  fix-doc-intersphinx-mapping.patch
-4554bdaa3dcdf963927b6b7924fa580dd045e99e2be254594863f1a8c63f868893a415ef0f4c2d469160f6ca4d3fd63593518c6d99cb576959d96556cbcb5cbc  0001-support-icalendar-6.0.0.patch
+728240af85a16a37b462457e22b0f19dc980ba700d89c64a1ce3d34eae04adaaf941a080a10fc78fb2da4d514a067cef24860af9a215a1ffc54aaf9c06e57649  khal-0.13.0.tar.gz
 "
