community/qt6-qtmultimedia: enable -dbg subpackage

--- a/community/qt6-qtmultimedia/APKBUILD
+++ b/community/qt6-qtmultimedia/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtmultimedia
 pkgver=6.8.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Classes for audio, video, radio and camera functionality"
 url="https://qt.io/"
 # armhf blocked by failing to find Qt6::OpenGLPrivate
@@ -40,6 +40,7 @@ case "$CARCH" in
 		;;
 esac
 subpackages="
+	$pkgname-dbg
 	$pkgname-dev
 	$pkgname-ffmpeg
 	$pkgname-gstreamer
