testing/lomiri-content-hub: upgrade to 2.1.0

--- a/testing/lomiri-content-hub/APKBUILD
+++ b/testing/lomiri-content-hub/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 # Contributor: Antoni Aloy <aaloytorrens@gmail.com>
 pkgname=lomiri-content-hub
-pkgver=2.0.0
-pkgrel=1
+pkgver=2.1.0
+pkgrel=0
 pkgdesc="Content sharing/picking infrastructure and service, designed to allow apps to securely and efficiently exchange content"
 url="https://gitlab.com/ubports/development/core/lomiri-content-hub"
 arch="all !armhf" # blocked by lomiri-ui-toolkit-dev
@@ -35,7 +35,6 @@ checkdepends="
 	"
 source="https://gitlab.com/ubports/development/core/lomiri-content-hub/-/archive/$pkgver/lomiri-content-hub-$pkgver.tar.gz
 	0001-Use-qdoc-qt5.patch
-	0002-Use-qmlplugindump-qt5.patch
 	"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 
@@ -44,8 +43,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=ON \
-		-DCMAKE_BUILD_TYPE=None \
-		-DWerror=OFF
+		-DCMAKE_BUILD_TYPE=None
 	cmake --build build
 }
 
@@ -69,7 +67,6 @@ package() {
 }
 
 sha512sums="
-9c54177eb8736bed7779856855dea27dd7cbde378180cfc9c3cc6cff29106c48745c2f069b24506d340672da1bdfacba0f59f7ebce3141ba5157b5e6c1c7bae5  lomiri-content-hub-2.0.0.tar.gz
-825cd2c0ec784b60caf969037fa511e9db64bc88fef01057181598e88c95cffb4f0f8f2454927df34aadac8543ef499b3a1bbbe15688dad356eec0bbb9df3074  0001-Use-qdoc-qt5.patch
-00e46300e3461d055db41eafa5507d3ed7771c9f2faa74c11f9219948cc4904d45034b39cc9ef755df9a1229ef2fe3aee925d39b1f7ef47d49dd4129322d541a  0002-Use-qmlplugindump-qt5.patch
+1e131946b3065317d8a3efaa458ba76d00a763733c696b0d624582306d528df6a8f12670975b8eb54c1535689a8ad20c2e0b8e227aea4d2fb92119975e2260aa  lomiri-content-hub-2.1.0.tar.gz
+e378ecbf02a692cabcc6870724c680884f74a68960ddff07d5ea90a01263c70e7a609c070ceeef633939ba63f19aa3d98953a491d5f60c23b7f6277e2cd0ba9d  0001-Use-qdoc-qt5.patch
 "
