community/firefox: disable debug on 32bit
fixes build running out of memory

fixes: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17072

--- a/community/firefox/APKBUILD
+++ b/community/firefox/APKBUILD
@@ -73,7 +73,7 @@ makedepends="
 	"
 subpackages="$pkgname-intl"
 case "$CARCH" in
-riscv64) ;;
+riscv64|x86|arm*) ;;
 *) subpackages="$subpackages $pkgname-dbg" ;;
 esac
 source="$pkgname-$pkgver.tar.xz::https://ftp.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkgver.source.tar.xz
