*/*: update gitlab.com/postmarketOS links to gitlab.postmarketos.org

--- a/community/gnss-share/APKBUILD
+++ b/community/gnss-share/APKBUILD
@@ -4,7 +4,7 @@ pkgname=gnss-share
 pkgver=0.8.2
 pkgrel=7
 pkgdesc="GNSS location provider, supporting multiple concurrent clients"
-url="https://gitlab.com/postmarketOS/gnss-share"
+url="https://gitlab.postmarketos.org/postmarketOS/gnss-share"
 arch="all"
 license="GPL-3.0-or-later"
 makedepends="go scdoc"
@@ -14,7 +14,7 @@ subpackages="
 	$pkgname-openrc
 	"
 source="
-	https://gitlab.com/postmarketOS/gnss-share/-/archive/$pkgver/gnss-share-$pkgver.tar.gz
+	https://gitlab.postmarketos.org/postmarketOS/gnss-share/-/archive/$pkgver/gnss-share-$pkgver.tar.gz
 	geoclue.conf
 	"
 
