community/apache-arrow: rebuild against protobuf 25

--- a/community/apache-arrow/APKBUILD
+++ b/community/apache-arrow/APKBUILD
@@ -3,7 +3,7 @@
 # based on arch linux PKGBUILD
 pkgname=apache-arrow
 pkgver=19.0.1
-pkgrel=2
+pkgrel=3
 _dotver=${pkgver//./}
 pkgdesc="multi-language toolbox for accelerated data interchange and in-memory processing"
 url="https://arrow.apache.org/"
@@ -69,7 +69,7 @@ source="https://archive.apache.org/dist/arrow/arrow-$pkgver/apache-arrow-$pkgver
 	$pkgname-arrow-testing-$_arrowsha.tar.gz::https://github.com/apache/arrow-testing/archive/$_arrowsha.tar.gz
 	$pkgname-parquet-testing-$_parquetsha.tar.gz::https://github.com/apache/parquet-testing/archive/$_parquetsha.tar.gz
 	"
-options="!check" # fail with py3.11
+options="!check net" # fail with py3.11
 
 case "$CARCH" in
 aarch64|x86|x86_64)
