community/ffmpeg: enable -dbg subpackage

--- a/community/ffmpeg/APKBUILD
+++ b/community/ffmpeg/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ffmpeg
 pkgver=6.1.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 url="https://ffmpeg.org/"
 arch="all"
@@ -60,6 +60,7 @@ makedepends="
 checkdepends="rsync"
 subpackages="
 	ffplay
+	$pkgname-dbg
 	$pkgname-dev
 	$pkgname-doc
 	$pkgname-libavcodec
