community/netdata: rebuild against protobuf 25

--- a/community/netdata/APKBUILD
+++ b/community/netdata/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=netdata
 pkgver=1.47.5
-pkgrel=5
+pkgrel=6
 pkgdesc="Real-time performance monitoring"
 url="https://www.netdata.cloud/"
 license="GPL-3.0-or-later"
@@ -36,7 +36,7 @@ pkgusers="netdata"
 pkggroups="netdata"
 subpackages="$pkgname-openrc $pkgname-python::noarch $pkgname-go-plugins:go"
 install="$pkgname.pre-install"
-options="!check" # tests require installation to /
+options="!check net" # tests require installation to /
 _aclk_schemas_commit=e07e855389c34a28645fa044e3fc6cb7a6f02a79
 _ml_dlib_commit=021cbbb1c2ddec39d8dd4cb6abfbbafdf1cf4482
 # This _h2o_commit fixes CVE-2023-44487, and does not follow upstream
