--- a/community/khal/APKBUILD
+++ b/community/khal/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Galen Abell <galen@galenabell.com>
-# Maintainer: Galen Abell <galen@galenabell.com>
+maintainer="Hugo Osvaldo Barrera <hugo@whynothugo.nl>"
 pkgname=khal
 pkgver=0.11.3
 pkgrel=3
