community/dino: upgrade to 0.5.0
https://dino.im/blog/2025/04/dino-0.5-release/

--- a/community/dino/APKBUILD
+++ b/community/dino/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=dino
-pkgver=0.4.5
-pkgrel=2
+pkgver=0.5.0
+pkgrel=0
 pkgdesc="Modern Jabber/XMPP client"
 url="https://dino.im"
 arch="all !s390x !ppc64le"
 license="GPL-3.0-only"
 depends="gst-plugins-good gst-plugins-good-gtk icu-data-full"
 makedepends="
-	cmake
+	meson
 	glib-dev
 	glib-networking
 	gpgme-dev
@@ -41,22 +41,18 @@ source="https://github.com/dino/dino/releases/download/v$pkgver/dino-$pkgver.tar
 #     - CVE-2021-33896
 
 build() {
-	cmake -B build -G Ninja \
-		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE=None \
-		-DBUILD_TESTS="$(want_check && echo ON || echo OFF)" \
-		-DENABLED_PLUGINS="notification-sound" \
-		-DUSE_SOUP3=yes
-	cmake --build build
+	abuild-meson \
+		-Dplugin-notification-sound=enabled \
+		. output
+	meson compile -C output
 }
 
 check() {
-	build/xmpp-vala-test
-	build/signal-protocol-vala-test
+	meson test --no-rebuild --print-errorlogs -C output
 }
 
 package() {
-	DESTDIR="$pkgdir" cmake --install build
+	DESTDIR="$pkgdir" meson install --no-rebuild -C output
 }
 
 notificationsound() {
@@ -64,5 +60,5 @@ notificationsound() {
 }
 
 sha512sums="
-877e218105b4c9b643145d557ebf0e19d9ad989146dcffde047aba46290389babf8814a8bd819788f91e34c11df0c8609c68f9de8fa418c0801c83642ad861c6  dino-0.4.5.tar.gz
+9cb6db27e6afd42204990c836019bc84a2a61af839d59cf8378520308d3016e6ac674ea4abd3044dfdf18e21e8431ef3cc85ad70d02c89d95c4dc702b32e05d2  dino-0.5.0.tar.gz
 "
