main/py3-markdown: upgrade to 3.8
https://github.com/Python-Markdown/markdown/releases/tag/3.8

--- a/main/py3-markdown/APKBUILD
+++ b/main/py3-markdown/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: fossdd <fossdd@pwned.life>
 pkgname=py3-markdown
-pkgver=3.7
+pkgver=3.8
 pkgrel=0
 pkgdesc="Python3 implementation of Markdown"
 url="https://python-markdown.github.io/"
@@ -14,9 +14,7 @@ makedepends="
 	"
 checkdepends="py3-coverage py3-yaml"
 subpackages="$pkgname-pyc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/Python-Markdown/markdown/archive/refs/tags/$pkgver.tar.gz
-	use-correct-import-path-in-abbr-py.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/Python-Markdown/markdown/archive/refs/tags/$pkgver.tar.gz"
 builddir="$srcdir/markdown-$pkgver"
 
 replaces="py-markdown" # Backwards compatibility
@@ -40,6 +38,5 @@ package() {
 }
 
 sha512sums="
-f4777f32e8203cc8e41a5aaf7c6afa41e4354e065315e4b926e1ebb44e28db293f6b5f43cd546485b5249aebe01d73e8c1e16bcc9ce0c38aebe73e0a590d4df6  py3-markdown-3.7.tar.gz
-fd45c2c210b9b9bdf1e751bacb25a48046319e359d341d69dd6ab85538f53362b08df0aef1726aa9557cb55a111efe7a06788d15bed9d516d567da6d709fe991  use-correct-import-path-in-abbr-py.patch
+18e1a36a8c961f886687956f51f2b0342b2c3366197503c9e3baecce78139c0999a83941e9d4cb6711c688b764bcce9d53bd708e2986b84a895f633a0c5ad250  py3-markdown-3.8.tar.gz
 "
