community/fluidsynth: make -dev subpackage depend on main package
The CMake script bundled in the dev subpackage fails if /usr/bin/fluidsynth
is not present:

> CMake Error at /usr/lib/cmake/fluidsynth/FluidSynthTargets.cmake:102 (message):
>   The imported target "FluidSynth::fluidsynth" references the file
>
>      "/usr/bin/fluidsynth"
>
>   but this file does not exist.  Possible reasons include:
>
>   * The file was deleted, renamed, or moved to another location.
>
>   * An install or uninstall procedure did not complete successfully.
>
>   * The installation package was faulty and contained
>
>      "/usr/lib/cmake/fluidsynth/FluidSynthTargets.cmake"
>
>   but not all the files it references.

--- a/community/fluidsynth/APKBUILD
+++ b/community/fluidsynth/APKBUILD
@@ -1,11 +1,13 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=fluidsynth
 pkgver=2.4.4
-pkgrel=1
+pkgrel=2
 arch="all"
 url="https://www.fluidsynth.org/"
 pkgdesc="A real-time software synthesizer based on the SoundFont 2 specifications"
 license="LGPL-2.1-or-later"
+# CMake script fails without /usr/bin/fluidsynth
+depends_dev="$pkgname"
 depends_libs="soundfont-timgm"
 makedepends="
 	alsa-lib-dev
