community/chatty: take over maintainership

--- a/community/chatty/APKBUILD
+++ b/community/chatty/APKBUILD
@@ -2,7 +2,8 @@
 # Contributor: Danct12 <danct12@disroot.org>
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Contributor: Mike Banon <mikebdp2@gmail.com>
-# Maintainer: Clayton Craft <clayton@craftyguy.net>
+# Contributor: Clayton Craft <clayton@craftyguy.net>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=chatty
 pkgver=0.8.7
 pkgrel=0
