--- a/community/cargo-c/APKBUILD
+++ b/community/cargo-c/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=cargo-c
-pkgver=0.10.11
+pkgver=0.10.12
 pkgrel=0
 pkgdesc="cargo subcommand to build and install C-ABI compatibile dynamic and static libraries"
 url="https://github.com/lu-zero/cargo-c"
@@ -52,9 +52,10 @@ package() {
 	install -Dm755 target/release/cargo-* -t "$pkgdir"/usr/bin/
 
 	install -Dm644 -t "$pkgdir/usr/share/doc/cargo-c" README.md
+	install -Dm644 -t "$pkgdir/usr/share/doc/cargo-c" LICENSE
 }
 
 sha512sums="
-6a5e98e5cce3a7b6efbdf40ff31c1f59d7b7673d807676d294a8e9d997f3c25c715f57bab2046ec190e0e9a8f1fae7006efb5004872d54e677ab7656e4ff26b4  cargo-c-0.10.11.tar.gz
-2094f3be387331fddd5aac14fb0335cdecf3fe85008e4aa867630fa67632701950e0a4d182e197caabd3f009883db89212617b1e86111f9d6b78ddc2d231717a  cargo-c-0.10.11-Cargo.lock
+8ee6dda8465a89ae6375abab66e83c056190c8bf85446e063696585201607f3231714a965dae3ff2ff8a94a7200eb360d3ab5420f95a4115cceb778dbe321ad9  cargo-c-0.10.12.tar.gz
+d27d0cb5d3aae0b14c82794e9414a5ff2c07cc3ee4b054f1de376ddaf7d88dda961923855daf07feb27504a4b29493037695f621ce0af0d54ba7003ad28d9c3c  cargo-c-0.10.12-Cargo.lock
 "
