--- a/community/kubo/APKBUILD
+++ b/community/kubo/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=kubo
-pkgver=0.33.2
-pkgrel=2
+pkgver=0.34.1
+pkgrel=0
 _migration=fs-repo-15-to-16/v1.0.0
 pkgdesc="Inter Platnetary File System (IPFS), a peer-to-peer hypermedia distribution protocol"
 url="https://ipfs.tech/"
@@ -52,6 +52,7 @@ package() {
 		-t "$pkgdir"/usr/bin
 
 	install -m644 -D -t "$pkgdir/usr/share/doc/$pkgname" README.md
+	install -m644 -D -t "$pkgdir/usr/share/doc/$pkgname" LICENSE-MIT
 
 	install -m755 -D "$srcdir"/ipfs.initd \
 		"$pkgdir"/etc/init.d/ipfs
@@ -72,7 +73,7 @@ migration() {
 }
 
 sha512sums="
-e8dafb8eb8def52521cb0d0f73d62d06dc693fc5f5d7505e60025b0818beddc4b75ccdd81bdac2f3fc1a695fc964bbd585b08e8ce460514c71091665049ebfbc  kubo-0.33.2.tar.gz
+ed0dd1591177cbe263730a411ab10a73c589d368bf584d5de6496e6073a18971b317338936b25788b2e1a0d0000822230ecaac265befcd62557c2dea99ebd0e2  kubo-0.34.1.tar.gz
 f2af30988033c3e80ee45cca0f67ab39f1f0089bc94378bf0e8b32a438d6b0448d8ce37f149a2db2a6a8d869e6aaddae8539f5d7286e4e8d70b2d78c7b1d837e  kubo-migration-fs-repo-15-to-16-v1.0.0.tar.gz
 3e51e9a3dca1b991e8549f8354f7c2cfd1bb9b73d7a59557878d5c9ab4189988676d789172af3ba1fd57193ec48ca9125919507b0de7d0400ce0d6166622e556  ipfs.initd
 c55afeb3efe381d18258ddf00f58325b77156375cf223fb2daa049df056efe22e9139cce0f81dc4c73759dad5097af5f3201414beb5950bd894df9ae8c7c4ed1  ipfs.confd
