community/abcl: upgrade to 1.9.3

--- a/community/abcl/APKBUILD
+++ b/community/abcl/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=abcl
-pkgver=1.9.2
+pkgver=1.9.3
 pkgrel=0
 pkgdesc="Armed Bear Common Lisp"
-url="https://www.abcl.org/"
+url="https://abcl.org/"
 # armhf, armv7: takes more than 6 hours to build
 # riscv64: blocked by apache-ant & openjdk8
 arch="noarch !armhf !armv7 !riscv64"
@@ -18,7 +18,7 @@ case "$CARCH" in
 	*)		_jdkbuild=8		;;
 esac
 makedepends="apache-ant openjdk$_jdkbuild-jdk"
-source="https://www.abcl.org/releases/$pkgver/abcl-src-$pkgver.tar.gz
+source="https://abcl.org/releases/$pkgver/abcl-src-$pkgver.tar.gz
 	fix-tests.patch
 	system-java-jna.patch
 	"
@@ -58,7 +58,7 @@ package() {
 }
 
 sha512sums="
-1b758b26be5dbe00fb75aef0ffca6cdfbbb7982a545c63b6378dbd3d22bed76e15628ee099c5728c3600d67fb74def249195060cc1af1486f6d52fcdb9ce245a  abcl-src-1.9.2.tar.gz
+1d4df4baf71252e6eb07045c50118dd4de08470978d743abe146bcc9dbcaace166b9bba9b4adf250446439ceb8534087acd8da2913b1469bca430e3684e96bc4  abcl-src-1.9.3.tar.gz
 81d561199c66bea0dc59a6165a94c17b731047208e7a828c15d16f33eb8a7d8d0720601d85cfcd034dc829ee2496085700a44aab2d6a8c7e33a2e9263f60a1ab  fix-tests.patch
-0e9d8a2548f5f0d7a2850d4ea1c77964ed460eed49b26f104967b1682e595c894e193d56c500ec3935418e5a9ebe738adb4e5f4c626132eea83cb8ce14115a34  system-java-jna.patch
+dca2fb4d2824a810e866b50a2cca5f58370dc1711ab191a9f2465a63b6b8854c64ab00f861d9b7a9b1740eae8c7682c65bc0ba52029eb732d61adb5b7c8fa397  system-java-jna.patch
 "
