testing/resources: upgrade to 1.8.0

--- a/testing/resources/APKBUILD
+++ b/testing/resources/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: mekyt <hello@mek.yt>
 # Maintainer: mekyt <hello@mek.yt>
 pkgname=resources
-pkgver=1.7.1
+pkgver=1.8.0
 pkgrel=0
 pkgdesc="Powerful monitor for your system resources and processes"
 url="https://github.com/nokyan/resources"
@@ -22,7 +22,7 @@ subpackages="$pkgname-lang"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/nokyan/resources/archive/refs/tags/v$pkgver.tar.gz
 "
-options="!check" # no test suite
+options="!check net" # no test suite and download rust packages
 
 build() {
 	abuild-meson -Dprofile=default . output
@@ -34,5 +34,5 @@ package() {
 }
 
 sha512sums="
-c0fa6a2acb51f093d9afc6ec5c4981719df40ed1497b5177ccc95219804d047681a92ca053f5a0f9c3795470157281e1188c52365201ced21df947715838f849  resources-1.7.1.tar.gz
+94b36b0fea71eaac93ffd153925a9924d530ea9ddd7e0503d255e1c523dfcd0371e7cee3a3cd0337711943423f27e0b306361637f59bd10e7b9ad3a43fe05627  resources-1.8.0.tar.gz
 "
