--- a/testing/py3-flask-security/APKBUILD
+++ b/testing/py3-flask-security/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Cowington Post <cowingtonpost@gmail.com>
 pkgname=py3-flask-security
-pkgver=5.4.3
-pkgrel=2
+pkgver=5.6.1
+pkgrel=0
 pkgdesc="Quick and simple security for Flask applications"
 url="https://github.com/pallets-eco/flask-security"
 arch="noarch"
@@ -20,6 +20,7 @@ depends="
 	py3-phonenumbers
 	"
 makedepends="
+	py3-flit-core
 	py3-gpep517
 	py3-setuptools
 	py3-wheel
@@ -55,7 +56,7 @@ package() {
 }
 
 sha512sums="
-9fdce3dfbfd622ae417166da383bb8bf744648b92026b4f28640e6658d355d25f7267382636bc1a5cc47969a7c0ebdd43d66b29aaafdd0cf7a6cafb248aff7a6  py3-flask-security-5.4.3.tar.gz
+5d8d648a15df2d79ad648ae9bbbecc1a90410b7e56c6aee7c7c6eb35006b3d5abcc9d5fde1abc7b16ba513bad299670cd09be89994fa01425d38d5057f5e2cb7  py3-flask-security-5.6.1.tar.gz
 5d0367c29f69362b1df536f26a7f399c25a351c46572cc37ffc5526c124a860a8fc0a0b01b19483daded64990247a0e48761c25e6b2a9316fbd293088315d016  nowarnings.patch
-1d77cf6d7a57100a072a788cd1e4b362f3ff8fe6e4cce8fdf777f1891ce365d9d7958e956f8c7b6ff9c1079234e21b095a6cb99ed687cd907ad8cc86030da36d  remove_importlib_resources.patch
+929cea510f4713df1a1b2f1038e9eb50bc2198b6865a431d753b3efe339cddf62b4e1ee75696db5dc619002228ee88aca70d084c567b02d2e91f7e162011c02e  remove_importlib_resources.patch
 "
