community/rnote: uprade to 0.12.0

--- a/community/rnote/APKBUILD
+++ b/community/rnote/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakob Meier <comcloudway@ccw.icu>
 # Maintainer: Jakob Meier <comcloudway@ccw.icu>
 pkgname=rnote
-pkgver=0.11.0
+pkgver=0.12.0
 pkgrel=0
 pkgdesc="Sketch and take handwritten notes."
 url="https://rnote.flxzt.net/"
@@ -16,6 +16,7 @@ makedepends="
 	appstream-dev
 	cargo
 	cargo-auditable
+	cargo-nextest
 	clang-dev
 	cmake
 	desktop-file-utils
@@ -67,6 +68,6 @@ cli() {
 }
 
 sha512sums="
-3a792738977a7f19c598122490d8f76a2b9f0ff348f2f65a6b9771ca3afb04cae5e9022dc6fe95883242bc7ddbf53ce742698ba709ffb4025b48ab149b21d677  rnote-0.11.0.tar.gz
+7e6331da97cdb48e6a2050476d6d539f6f965994416cd143e65374ef8c734c5d8d8926fa42e3cd022c7d101b093db097717af1e1bd1fc63ee7bcf4202b5500f5  rnote-0.12.0.tar.gz
 7c53d5a603cc6779fa79652cfb04897901f7dc04f226686903bb56dfa55cb8a67720f611c2da80eb2d365bfbdb7a36fea29a5c63f5b62ce5f16c0830c4047aa9  use_cargo_auditable.patch
 "
