community/crystal: add gc-static and pcre2-static to makedepends
needed to build static snapshot

--- a/community/crystal/APKBUILD
+++ b/community/crystal/APKBUILD
@@ -29,8 +29,10 @@ makedepends="
 	llvm$_llvmver-dev
 	"
 [ "${BUILD_STATIC:-0}" -eq 1 ] && makedepends="$makedepends
+	gc-static
 	libxml2-static
 	llvm$_llvmver-static
+	pcre2-static
 	zlib-static
 	zstd-static
 	"
