community/libodiosacd: build with gnu-libiconv

--- a/community/libodiosacd/APKBUILD
+++ b/community/libodiosacd/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="SACD decoder library"
 url="https://tari.in/www/software/libodiosacd/"
 arch="all"
 license="GPL-3.0-or-later"
-makedepends="cmake samurai"
+makedepends="cmake gnu-libiconv-dev samurai"
 options="!check" # no test suite
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/tari01/libodiosacd/archive/refs/tags/$pkgver.tar.gz"
@@ -15,7 +15,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/tari01/libodiosacd/archive/r
 build() {
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_INSTALL_PREFIX=/usr
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DIconv_INCLUDE_DIR=/usr/include/gnu-libiconv
 	cmake --build build
 }
 
