community/pinta: upgrade to 3.0
GTK4/libadwaita rewrite, .Net 9.x support, plugins, etc.

--- a/community/pinta/APKBUILD
+++ b/community/pinta/APKBUILD
@@ -1,21 +1,33 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer:
 pkgname=pinta
-pkgver=2.1.2
-pkgrel=1
+pkgver=3.0
+pkgrel=0
+# Use corresponding gitrev hash to get missing Pinta.AddinUtils files
+_gitrev="6b8179e225e222c364bedf79df850f75fe8eb5f0"
 pkgdesc="Simple GTK# paint program"
 url="https://www.pinta-project.com/"
 arch="x86_64 aarch64 armv7"
 license="MIT"
-depends="dotnet8-runtime gtk+3.0"
-makedepends="dotnet8-sdk gettext-dev gtk+3.0-dev intltool"
+depends="dotnet9-runtime webp-pixbuf-loader"
+makedepends="autoconf-archive dotnet9-sdk gettext-dev gtk4.0-dev intltool libadwaita-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://github.com/PintaProject/Pinta/releases/download/$pkgver/pinta-$pkgver.tar.gz"
+source="https://github.com/PintaProject/Pinta/releases/download/$pkgver/pinta-$pkgver.tar.gz
+	https://github.com/PintaProject/Pinta/raw/$_gitrev/installer/addins/Pinta.AddinUtils.csproj
+	https://github.com/PintaProject/Pinta/raw/$_gitrev/installer/addins/Program.cs
+	"
 
 prepare() {
 	default_prepare
-	# Packaging fails without this
-	sed -i '/^PINTA_BUILD_OPTS/ s/$/ -maxcpucount:1/' Makefile.in
+	# Modify buildprops for .Net 9.x
+	sed -i 's/net8.0/net9.0/g' Directory.Build.props
+	sed -i 's/StartupWMClass=Pinta/StartupWMClass=com.github.PintaProject.Pinta/g' \
+		xdg/pinta.desktop.in
+
+	# Temporarily move files until they are included in the tarball
+	mkdir installer/addins
+	mv "$srcdir"/Pinta.AddinUtils.csproj installer/addins/
+	mv "$srcdir"/Program.cs installer/addins/
 }
 
 build() {
@@ -38,5 +50,7 @@ package() {
 }
 
 sha512sums="
-68b23a1ed9aef3794edd3410d2f7d92ce58ecbd96ec15a20bb263fca397ddd0a850ace32d3fcc291f4f3ab9147c5f40e7d7af249dc9c6fa9304417740fbad798  pinta-2.1.2.tar.gz
+4bbdec17132c513617bba0cacda6a1755237b5cffced6e7e665f5077b57547277fcfd7c517b5568169fdbf5afca85e4db4a2cbae55b85514404cdf23cbea1f37  pinta-3.0.tar.gz
+46f3a1643d3d522f4c678408ae8e36c24b72df12c0cd8fa5fdd6ebf062394d110fd9fcf1411048e9076d231d9413a5f95d9aa9c43e13bc9b6fdc18b2dbabaee4  Pinta.AddinUtils.csproj
+11b7d5184effae26a6a1dbe63521897f7fa03d0849be40d523029e393883f9da3394b6ee3579e7a6dba933daacfa303fd379ed09edb3c5ba2b86929950170daf  Program.cs
 "
