community/ocaml-findlib: enable ocamlfind program on riscv64/loongarch64 & run tests
This allows using the ocamlfind package manager on all archs.

The library is not enabled because OCaml 4 and 5 libraries do not mix,
so enabling it would turn this into ocaml5-findlib for those 2 archs.

--- a/community/ocaml-findlib/APKBUILD
+++ b/community/ocaml-findlib/APKBUILD
@@ -6,7 +6,7 @@ pkgver=1.9.6
 pkgrel=4
 pkgdesc="OCaml package manager"
 url="http://projects.camlcity.org/projects/findlib.html"
-arch="all !riscv64 !loongarch64" # ocaml
+arch="all"
 license="MIT"
 depends="ocaml-runtime"
 depends_dev="$pkgname=$pkgver-r$pkgrel ocaml"
@@ -18,6 +18,14 @@ builddir="$srcdir/$_pkgname-$pkgver"
 # 32bit archs
 case "$CARCH" in
 	arm*|x86) options="$options textrels" ;;
+	riscv64|loongarch64)
+		# Install ocamlfind executable only, because buildrepo will
+		# only build APKBUILDs that have $pkgname as directory name,
+		# and building the -dev libs will make this an ocaml5-findlib
+		subpackages="$pkgname-doc"
+		depends=""
+		makedepends="${makedepends//ocaml-/ocaml5-}"
+		;;
 esac
 
 build() {
@@ -30,8 +38,23 @@ build() {
 	make -j1 all opt
 }
 
+check() {
+	local l; for l in unix str threads; do
+		OCAMLFIND_CONF=./findlib.conf ./itest $l
+	done
+}
+
 package() {
-	make install prefix="$pkgdir"
+	case "$CARCH" in
+		riscv64|loongarch64)
+			make install-config install-doc prefix="$pkgdir"
+			install -Dvm755 src/findlib/ocamlfind_opt \
+				"$pkgdir"/usr/bin/ocamlfind
+			;;
+		*)
+			make install prefix="$pkgdir"
+			;;
+	esac
 
 	mkdir -p "$pkgdir"/usr/share/doc/$_pkgname/
 	install -m 644 doc/README doc/QUICKSTART \
@@ -56,6 +79,7 @@ prepare_py_provides() {
 	local pkgbasedir=${pkgbasedir:-"$startdir/pkg"}
 	local controldir="$pkgbasedir"/.control.${subpkgname:-$pkgname}
 
+	command -v ocaml4-abuild-find >/dev/null || return 0
 	options_has "!tracedeps" && return 0
 
 	ocaml4-abuild-find provides \
@@ -66,6 +90,8 @@ prepare_py_provides() {
 
 scan_python3_dependency() {
 	local controldir="$2" datadir="$3"
+
+	command -v ocaml4-abuild-find >/dev/null || return 0
 
 	ocaml4-abuild-find requires \
 		"$datadir"/usr/lib/ocaml \
