--- a/community/crab-hole/APKBUILD
+++ b/community/crab-hole/APKBUILD
@@ -4,7 +4,7 @@ pkgver=0.1.12
 pkgrel=0
 pkgdesc="A DNS level ad and spy blocker"
 url="https://github.com/LuckyTurtleDev/crab-hole"
-# other archs: missing ring support
+# other architectures: missing ring support
 arch="x86_64 aarch64 x86 armhf armv7"
 license="AGPL-3.0-or-later"
 makedepends="cargo cargo-auditable"
