community/kde-frameworks: upgrade to 6.13.0

--- a/community/kfilemetadata/APKBUILD
+++ b/community/kfilemetadata/APKBUILD
@@ -2,7 +2,7 @@
 # group=kde-frameworks
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kfilemetadata
-pkgver=6.12.0
+pkgver=6.13.0
 pkgrel=0
 pkgdesc="A library for extracting file metadata"
 # armhf blocked by qt6-qtdeclarative -> ki18n
@@ -27,6 +27,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
+checkdepends="xwayland-run"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kfilemetadata.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kfilemetadata-$pkgver.tar.xz"
@@ -41,7 +42,7 @@ build() {
 }
 
 check() {
-	ctest --test-dir build -E "(index|exiv2)extractortest"
+	wlheadless-run -- ctest --test-dir build -E "(index|exiv2)extractortest"
 }
 
 package() {
@@ -49,5 +50,5 @@ package() {
 }
 
 sha512sums="
-3365a95a5eb9810f629e6ec8638c5019be086829c8a4fdee0c00c1dc3aea1d2b457c48adf2709dd21b26e79a3732db763246c7a304fdc780eeafbebed56b4422  kfilemetadata-6.12.0.tar.xz
+738d6e3502275e1333249b4865e032ecf29ac8aa7ffcba80423657fc4f294cd6f03117271d303eabd5b0207fec2e5ec2de616da0a0602d662bba935fcd56c64f  kfilemetadata-6.13.0.tar.xz
 "
