--- a/community/kwindowsystem/APKBUILD
+++ b/community/kwindowsystem/APKBUILD
@@ -2,7 +2,7 @@
 # group=kde-frameworks
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kwindowsystem
-pkgver=6.12.0
+pkgver=6.13.0
 pkgrel=0
 pkgdesc="Access to the windowing system"
 # armhf blocked by qt6-qtdeclarative
@@ -24,7 +24,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
-checkdepends="xvfb-run"
+checkdepends="xwayland-run"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kwindowsystem.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kwindowsystem-$pkgver.tar.xz"
@@ -42,10 +42,17 @@ build() {
 check() {
 	local skipped_tests="kwindowsystem-(kwindowsystem_threadtest"
 	local tests="
-		kwindowsystemx11test
-		kwindowinfox11test
 		compositingenabled_test
+		kkeyserver_x11_unittest
+		kmanagerselectiontest
+		kstartupinfo_unittest
+		kwindoweffectstest
+		kwindowinfox11test
+		kwindowsystemx11test
+		kxmessages_unittest
 		netrootinfotestwm
+		netwininfotestclient
+		netwininfotestwm
 		"
 	case "$CARCH" in
 		s390x)
@@ -60,7 +67,7 @@ check() {
 	done
 	skipped_tests="$skipped_tests)"
 	echo $skipped_tests
-	xvfb-run ctest --test-dir build -E "$skipped_tests"
+	wlheadless-run -- ctest --test-dir build -E "$skipped_tests"
 }
 
 package() {
@@ -68,5 +75,5 @@ package() {
 }
 
 sha512sums="
-fd76b3e52f66125370ee19eeb8745ee969ad68589021a0011d215d6b76058f48f7a680339150c9f9b267295bdabf3e604b9a6969ad06c9adab56e1d1eab17b89  kwindowsystem-6.12.0.tar.xz
+421a374aa952c56d786980d7ef1156bc2fa401e440d9b7e332fe025313dadfe86ff816bceb115f7c7a5c88e92ac946885da587dff2a9647f1c5012604ee1fc05  kwindowsystem-6.13.0.tar.xz
 "
