--- a/community/kcontacts/APKBUILD
+++ b/community/kcontacts/APKBUILD
@@ -1,10 +1,8 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=kde-frameworks
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kcontacts
-pkgver=6.12.0
+pkgver=6.13.0
 pkgrel=0
 pkgdesc="Address book API for KDE"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -29,7 +27,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
-checkdepends="xvfb-run"
+checkdepends="wlheadless-run"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kcontacts.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kcontacts-$pkgver.tar.xz"
@@ -44,8 +42,7 @@ build() {
 }
 
 check() {
-	# kcontacts-addresstest requires Wayland display
-	xvfb-run ctest --test-dir build -E "kcontacts-addresstest"
+	wlheadless-run -- ctest --test-dir build -E "kcontacts-addressformattest"
 }
 
 package() {
@@ -53,5 +50,5 @@ package() {
 }
 
 sha512sums="
-36f7f67aeb030cbe689d50c459bb8ee4133cebd033f21231bd465420c3cbff6a05035a4955863f1e0e3f1d80f51adc894f053b20d3c54bbacd73ea3623a43d9b  kcontacts-6.12.0.tar.xz
+7af7bde613e6eee49c6468e09d3e197c9123736cfc6dc51ddf583cee2ec18493c900ed4a35d66aeca744600a18289484180d4be4ef0c3046f9cbe35159616198  kcontacts-6.13.0.tar.xz
 "
