--- a/community/kirigami/APKBUILD
+++ b/community/kirigami/APKBUILD
@@ -2,7 +2,7 @@
 # group=kde-frameworks
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kirigami
-pkgver=6.12.0
+pkgver=6.13.0
 pkgrel=0
 pkgdesc="A QtQuick based components set"
 # armhf blocked by qt6-qtdeclarative
@@ -26,7 +26,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
-checkdepends="xvfb-run"
+checkdepends="xwayland-run"
 subpackages="$pkgname-dev $pkgname-libs $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kirigami.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kirigami-$pkgver.tar.xz"
@@ -46,7 +46,7 @@ build() {
 }
 
 check() {
-	xvfb-run -a ctest --test-dir build
+	xwfb-run -- ctest --test-dir build -E "wheelhandler/tst_scrolling.qml"
 }
 
 package() {
@@ -54,5 +54,5 @@ package() {
 }
 
 sha512sums="
-3ce4c7d7e6d76ffb4630632925998253f7c1b0a0244ba7fa9db60554403216e95712a78c5b2dcbb4750afef87b56300254f29b4c5367262c45455e1ec5de5bfa  kirigami-6.12.0.tar.xz
+8f98e13703bef95a18f2e83f8b9bb28aa38d5889fbf05381e46613442f16412666d83fe1d04a0e893bb34fd924a2c5191287f0ad8c1beb5f65683b475e9b5d9f  kirigami-6.13.0.tar.xz
 "
