testing/cargo-chef: drop reduce-size.patch

--- a/testing/cargo-chef/APKBUILD
+++ b/testing/cargo-chef/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Paolo Barbolini <paolo.barbolini@m4ss.net>"
 pkgname=cargo-chef
 pkgver=0.1.71
-pkgrel=0
+pkgrel=1
 pkgdesc="A cargo sub-command to build project dependencies for optimal Docker layer caching."
 url="https://github.com/LukeMathWalker/cargo-chef"
 arch="all"
@@ -12,10 +12,7 @@ makedepends="
 	"
 checkdepends="cargo"
 subpackages="$pkgname-doc"
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/LukeMathWalker/cargo-chef/archive/refs/tags/v$pkgver.tar.gz
-	reduce-size.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/LukeMathWalker/cargo-chef/archive/refs/tags/v$pkgver.tar.gz"
 # cargo fetch
 options="net"
 
@@ -43,5 +40,4 @@ package() {
 
 sha512sums="
 4de0553ce6151d574637d7125d32a12036291a18fb9046e98e4fc72a917947903fb998b4f836b08b8163fe67c328c89f9f1c11b7a91027f07aa65e82b4e47045  cargo-chef-0.1.71.tar.gz
-38560f45274db1344bb48469deccc36c25435843b790f566ae1e6f5d4048d452c100596b308925329c934c0dce8b08b255c4b6fa207b331d7b0a4315dd903e50  reduce-size.patch
 "
