testing/nfoview: upgrade to 2.1
https://github.com/otsaloma/nfoview/releases/tag/2.1

--- a/testing/nfoview/APKBUILD
+++ b/testing/nfoview/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Robin Candau <robincandau@protonmail.com>
 # Maintainer: Robin Candau <robincandau@protonmail.com>
 pkgname=nfoview
-pkgver=2.0.1
+pkgver=2.1
 pkgrel=0
 pkgdesc="Simple NFO file viewer in GTK+ 3"
 url="https://otsaloma.io/nfoview/"
 arch="noarch"
 license="GPL-3.0-or-later"
-depends="gobject-introspection hicolor-icon-theme pango python3 py3-gobject3 font-cascadia-code-nerd"
+depends="gobject-introspection hicolor-icon-theme pango python3 py3-cairo py3-gobject3 font-cascadia-code-nerd"
 checkdepends="py3-pytest xvfb-run"
 makedepends="py3-build py3-installer py3-setuptools py3-wheel gtk4.0-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/otsaloma/nfoview/archive/$pkgver.tar.gz"
@@ -28,5 +28,5 @@ package() {
 	install -Dm 644 README.md "$pkgdir/usr/share/doc/$pkgname/README.md"
 }
 sha512sums="
-109cbe090ad0da1b4cbcd28418b2a8d2213972578419545d7b5523e7cf8683ca851d20d5c56f363f23f28f0274dcead128c864ce44fb551d88f229615a8d4bef  nfoview-2.0.1.tar.gz
+ba9fcb66f97895e2e21f4b70190f8dfdd10d201fddfb422252742bfa741003f657d098fe9e0e5f75e915668310d6034794ad6d787e46a1ac228268a8cdb01019  nfoview-2.1.tar.gz
 "
