main/util-linux: split liblastlog2 into subpackage
All other libraries in util-linux are split into subpackage. When
liblastlog2 was introduced by upstream in 2024, the util-linux package
was upgraded without ever taking this new library into consideration.

Split liblastlog2 subpackage, like all other util-linux libraries.

--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.40.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -27,6 +27,7 @@ subpackages="
 
 	libblkid:_mv_lib
 	libfdisk:_mv_lib
+	liblastlog2:_mv_lib
 	libmount:_mv_lib
 	libsmartcols:_mv_lib
 	libuuid:_mv_lib
@@ -277,6 +278,11 @@ _mv_lib() {
 		libfdisk)
 			license="LGPL-2.1-or-later"
 			pkgdesc="Partitioning library for fdisk-like programs"
+			;;
+		liblastlog2)
+			license="BSD-2-Clause"
+			pkgdesc="Y2038 safe version of lastlog"
+			amove usr/lib/security/pam_lastlog2.so
 			;;
 		libmount)
 			license="LGPL-2.1-or-later"
