--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=2
+pkgrel=3
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -27,6 +27,7 @@ subpackages="
 
 	libblkid:_mv_lib
 	libfdisk:_mv_lib
+	liblastlog2:_mv_lib
 	libmount:_mv_lib
 	libsmartcols:_mv_lib
 	libuuid:_mv_lib
@@ -283,6 +284,11 @@ _mv_lib() {
 		libfdisk)
 			license="LGPL-2.1-or-later"
 			pkgdesc="Partitioning library for fdisk-like programs"
+			;;
+		liblastlog2)
+			license="BSD-2-Clause"
+			pkgdesc="Y2038 safe version of lastlog"
+			amove usr/lib/security/pam_lastlog2.so
 			;;
 		libmount)
 			license="LGPL-2.1-or-later"
