--- a/community/vorbis-tools/APKBUILD
+++ b/community/vorbis-tools/APKBUILD
@@ -1,27 +1,19 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=vorbis-tools
-pkgver=1.4.2
-pkgrel=4
+pkgver=1.4.3
+pkgrel=0
 pkgdesc="Extra tools for Ogg-Vorbis"
 url="https://www.xiph.org/vorbis/"
 arch="all"
 license="GPL-2.0-only"
 makedepends="curl-dev flac-dev libvorbis-dev libao-dev speex-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://downloads.xiph.org/releases/vorbis/vorbis-tools-$pkgver.tar.gz
-	CVE-2023-43361.patch
-	gcc14.patch"
+source="https://downloads.xiph.org/releases/vorbis/vorbis-tools-$pkgver.tar.gz"
 
 # secfixes:
 #   9.54-r1:
 #     - CVE-2023-43361
-
-prepare() {
- 	default_prepare
-	update_config_sub
-	update_config_guess
-}
 
 build() {
 	./configure \
@@ -46,7 +38,5 @@ package() {
 }
 
 sha512sums="
-31681560434054706981aef64406975295eb405a9d2d7c0468af789d6c23edb7cfc1c19d26a28fa7061835524289cdc6d217a4669c43a2eb828189370cc6fcaf  vorbis-tools-1.4.2.tar.gz
-e5e5537991d9e3a294dc2f18ae2d01f0fb99b251c05de096675a290ec6c4e83d26c28b35ea79b3e8b128e3848ae1a438b40d2d4af6c22fa6801c2993d05497af  CVE-2023-43361.patch
-21ea0e4d9262595596a1a60344b0e2195ab5e882105bad32ae65b6089c7d66465a3917d1789ef3b604d8baf27fab2b6b84210c7541310bd062debef4f1dbe344  gcc14.patch
+096cb82073ca697fd3556e11c09e8296f60d4abc3cdfee6296fe8643f2e39edcf093704453901fe34d03c7818f59d665d665504a217c1399079df1d936d763e4  vorbis-tools-1.4.3.tar.gz
 "
