--- a/community/nextcloud30/APKBUILD
+++ b/community/nextcloud30/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 _pkgname=nextcloud
 pkgver=30.0.9
-pkgrel=0
+pkgrel=1
 is_latest=true
 _pkgvermaj=${pkgver%%.*}
 pkgname=nextcloud$_pkgvermaj
@@ -87,6 +87,7 @@ source="https://download.nextcloud.com/server/releases/nextcloud-$pkgver.tar.bz2
 	dont-update-htaccess.patch
 	disable-integrity-check-as-default.patch
 	use-external-docs-if-local-not-avail.patch
+	fix-setup-ignore-missing-theming-app.patch
 
 	$_pkgname-config.php
 	$_pkgname.logrotate
@@ -315,6 +316,7 @@ daeabeaa315bb908cc1e49612cce4b2debd71d17acb84b5d14e15fe124c907884b72d54e9aa669ec
 12f4a39aef0f81a0115c81bf2b345cc194537a7e8300748b800b0e35bc07928091296074b23c2019c17aced69854a11d1ed7225f67eefd27cf00c3969a75c5b0  dont-update-htaccess.patch
 cb04252d01407c7030e87dd54616c621ea0f85ef0212674b1161288182538cae0fb31c67e7cc07c66f9607075774c64e386009cc66365b1f1b155f6ad4f83ac0  disable-integrity-check-as-default.patch
 c0a9b7c31c8beaca711f8e97d98441007b3dca7fb3d316d2eacd28a73b5233def6f846c02d98202f75efb9cb248b8787a80e20b07c32d1c7534a0e54bb20feab  use-external-docs-if-local-not-avail.patch
+a8cf05164e3733d3065df017333b83a33f97df3a7b6515f7ad2fd73a0286a7753ed02d67b8c4c9823942dd5af74126b6b86a0711a6ef1f403e7741fb988aca08  fix-setup-ignore-missing-theming-app.patch
 5f73cd9399fa484ef15bd47e803c93381deffbc7699eceadbb5c27e43b20156806d74e5021a64d28f0165ef87b519e962780651711a37bceb9f0b04455dfdce1  nextcloud-config.php
 7388458a9e8b7afd3d3269718306410ffa59c3c23da4bef367a4d7f6d2570136fae9dd421b19c1441e7ffb15a5405e18bb5da67b1a15f9f45e8b98d3fda532ba  nextcloud.logrotate
 dcc57735d7d4af4a7ebbdd1186d301e51d2ae4675022aea6bf1111222dfa188a3a490ebd6e7c8a7ac30046cb7d93f81cec72a51acbc60d0c10b7fb64630c637a  nextcloud.confd
