community/nextcloud30: fix broken new installations
https://github.com/nextcloud/server/issues/52131

--- a/community/nextcloud30/APKBUILD
+++ b/community/nextcloud30/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 _pkgname=nextcloud
 pkgver=30.0.9
-pkgrel=0
+pkgrel=1
 is_latest=false
 _pkgvermaj=${pkgver%%.*}
 pkgname=nextcloud$_pkgvermaj
@@ -87,6 +87,7 @@ source="https://download.nextcloud.com/server/releases/nextcloud-$pkgver.tar.bz2
 	dont-update-htaccess.patch
 	disable-integrity-check-as-default.patch
 	use-external-docs-if-local-not-avail.patch
+	fix-setup-ignore-missing-theming-app.patch
 
 	$_pkgname-config.php
 	$_pkgname.logrotate
