community/xfce4-pulseaudio-plugin: upgrade to 0.5.0 - upgrade to 0.5.0 - use maintainer variable - change to meson build - makedepends add "meson", remove "dbus-dev" (not mentioned in meson.build) - change download file from "tar.bz2" to "tar.xz", it was changed in xfce archive

--- a/community/xfce4-pulseaudio-plugin/APKBUILD
+++ b/community/xfce4-pulseaudio-plugin/APKBUILD
@@ -1,32 +1,35 @@
 # Contributor: VÖRÖSKŐI András <voroskoi@gmail.com>
-# Maintainer: Jakko <jahau@rocketmail.com>
+maintainer="Jakko <jahau@rocketmail.com>"
 pkgname=xfce4-pulseaudio-plugin
-pkgver=0.4.9
+pkgver=0.5.0
 pkgrel=0
 pkgdesc="Xfce panel plugin for pulseaudio mixer control"
 url="https://docs.xfce.org/panel-plugins/xfce4-pulseaudio-plugin"
 arch="all"
 license="GPL-2.0-or-later"
-makedepends="xfce4-panel-dev pulseaudio-dev libxfce4ui-dev dbus-dev exo-dev
-	libnotify-dev keybinder3-dev"
+makedepends="
+	exo-dev
+	keybinder3-dev
+	libnotify-dev
+	libxfce4ui-dev
+	meson
+	pulseaudio-dev
+	xfce4-panel-dev
+"
 options="!check" # Check is empty
 subpackages="$pkgname-lang"
-source="https://archive.xfce.org/src/panel-plugins/xfce4-pulseaudio-plugin/${pkgver%.*}/xfce4-pulseaudio-plugin-$pkgver.tar.bz2"
+source="https://archive.xfce.org/src/panel-plugins/xfce4-pulseaudio-plugin/${pkgver%.*}/xfce4-pulseaudio-plugin-$pkgver.tar.xz"
 
 build() {
-	./configure \
-	    --prefix=/usr \
-	    --sysconfdir=/etc \
-	    --libexecdir=/usr/lib \
-	    --localstatedir=/var \
-	    --disable-static
-	make
+	abuild-meson \
+		output .
+	meson compile -C output
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" meson install --no-rebuild -C output
 }
 
 sha512sums="
-7fa29e85146e8cbbd420aed11050924fbb9c1a93657da1a4d3e207f5a7cc7fc99acdc41b467420a8948535a7f45e2a8e6d63f79df3cef228ada810566f15c263  xfce4-pulseaudio-plugin-0.4.9.tar.bz2
+19e4520e8a16c6d505f33748ff6612f5d9abe213bfe28a3818ba6f95cdccfcf3cda336a397ecef51ca53c2b846758b468a9e7d5690ae6dd1c00395e516f9e101  xfce4-pulseaudio-plugin-0.5.0.tar.xz
 "
