community/lf: add version information

--- a/community/lf/APKBUILD
+++ b/community/lf/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: James Chen-Smith <james@chen-smith.net>
 pkgname=lf
 pkgver=34
-pkgrel=2
+pkgrel=3
 pkgdesc="Terminal filemanager written in Go with vim-style keybindings"
 options="chmod-clean net"
 url="https://github.com/gokcehan/lf"
@@ -23,7 +23,7 @@ export GOTMPDIR="${GOTMPDIR:-"$srcdir"}"
 export GOMODCACHE="${GOMODCACHE:-"$srcdir/go"}"
 
 build() {
-	go build -v -o bin/$pkgname
+	go build -v -ldflags "-X main.gVersion=r$pkgver" -o bin/$pkgname
 }
 
 check() {
