community/py3-boolean.py: upgrade to 5.0

--- a/community/py3-boolean.py/APKBUILD
+++ b/community/py3-boolean.py/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=py3-boolean.py
 _pkgname=boolean.py
-pkgver=4.0
-pkgrel=5
+pkgver=5.0
+pkgrel=0
 pkgdesc="Define boolean algebras, create and parse boolean expressions and DSL"
 url="https://github.com/bastikr/boolean.py"
 arch="noarch"
@@ -11,7 +11,7 @@ license="BSD-2-Clause"
 makedepends="py3-setuptools py3-gpep517 py3-installer py3-wheel"
 checkdepends="py3-pytest"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/b/$_pkgname/$_pkgname-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/bastikr/boolean.py/archive/refs/tags/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
@@ -32,5 +32,5 @@ package() {
 }
 
 sha512sums="
-2b0328d0ae8a4c75ad3093f63491edf8a104471a8fc915dfc735bf2e78edae89513f21f7c59c7235db55a56d1cf019ac4dbf0f5a9e972d930b0e5006458b1f33  boolean.py-4.0.tar.gz
+edd3fa81c45667665183c22f4fe1c78bd39bd3dfff7fff942b8645e9e15839a13adcacabc5115941b350bb0a15a653d9f472e286429751afe29a8d98f8fe6b7f  py3-boolean.py-5.0.tar.gz
 "
