main/coreutils: install link into /bin
Busybox's symlink is in /bin/link, so link should be added to the list
of symlinks to keep in /bin so that it properly overwrites busybox's
symlink.

This issue was found when testing usr merge downstream in pmOS.

--- a/main/coreutils/APKBUILD
+++ b/main/coreutils/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=coreutils
 pkgver=9.7
-pkgrel=0
+pkgrel=1
 pkgdesc="The basic file, shell and text manipulation utilities"
 url="https://www.gnu.org/software/coreutils/"
 arch="all"
@@ -68,7 +68,7 @@ package() {
 			# Keep some binaries in /bin to replace busybox symlinks
 			base64|cat|chgrp|chmod|chown|cp|date|dd|df|echo|false|ln|ls|mkdir|\
 			mknod|mktemp|mv|nice|printenv|pwd|rm|rmdir|sleep|stat|stty|sync|\
-			touch|true|uname|coreutils) ;;
+			touch|true|uname|coreutils|link) ;;
 			*)
 				if [ -L "$i" ]; then
 					rm "$i"
