main/linux-firmware: upgrade to 20250410

--- a/main/linux-firmware/APKBUILD
+++ b/main/linux-firmware/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oliver Smith <ollieparanoid@postmarketos.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=linux-firmware
-pkgver=20250311
+pkgver=20250410
 pkgrel=0
 pkgdesc="firmware files for linux"
 url="https://git.kernel.org/?p=linux/kernel/git/firmware/linux-firmware.git;a=summary"
@@ -21,11 +21,11 @@ source="https://gitlab.com/kernel-firmware/linux-firmware/-/archive/$pkgver/linu
 	"
 
 # Put /lib/firmware/* folders in subpackages
-_folders="3com acenic adaptec advansys airoha amd amd-ucode amdgpu amdnpu
-	amdtee amlogic amphion ar3k arm ath10k ath11k ath12k ath6k ath9k_htc atmel
-	atusb av7110 bnx2 bnx2x brcm cadence cavium cirrus cis cnm cpia2 cxgb3 cxgb4
-	cypress dabusb dpaa2 dsp56k e100 edgeport emi26 emi62 ene-ub6250 ess go7007
-	i915 imx inside-secure intel isci ixp4xx kaweth keyspan keyspan_pda korg
+_folders="3com acenic adaptec advansys aeonsemi airoha amd amd-ucode amdgpu
+	amdnpu amdtee amlogic amphion ar3k arm ath10k ath11k ath12k ath6k ath9k_htc
+	atmel atusb av7110 bnx2 bnx2x brcm cadence cavium cirrus cis cnm cpia2 cxgb3
+	cxgb4 cypress dabusb dpaa2 dsp56k e100 edgeport emi26 emi62 ene-ub6250 ess
+	go7007 i915 imx inside-secure intel isci ixp4xx kaweth keyspan keyspan_pda korg
 	libertas liquidio matrox mediatek mellanox meson microchip moxa mrvl mwl8k
 	mwlwifi myricom netronome nvidia nxp ositech powervr qca qcom qed qlogic r128
 	radeon realtek rockchip rsi rtl_bt rtl_nic rtlwifi rtw88 rtw89 sb16 slicoss sun
@@ -218,7 +218,7 @@ s5p_mfc() {
 }
 
 sha512sums="
-2b1b1c7434c81d1a5cb79ce46ee09d6db95620a9df63250ebfaf1d6f10b1a3022b88bd2ccd9f4c2077a79e2ec20566020803b6a8bfdf0fc1ba490947129d21b7  linux-firmware-20250311.tar.gz
+acbee11445b113fa386e2fb4581e036f8276ceaaab231b3cbea5a602c6638949199861f191894075e1c668c569a5412fa3482dd5e6947ec5ce009241e2ec0649  linux-firmware-20250410.tar.gz
 62246630d710dabcdc98443a27ecd610e1c3fb047fbaf0fd905cd9a2d9406c0b38c589e55adb6385f288c5a208bbaca220510da5df882ddaa39967724592adc9  bluez-firmware-2bbfb8438e824f5f61dae3f6ebb367a6129a4d63.tar.gz
 b4879ff8c9bbe82eb579a8eef86f332d525b59a649805080c15275f45be4c015a2089befc2acd5d78537277e02b5f66ef5060605fd833e0cb40f1e22a5f484b1  brcm-firmware-3900afffcd85198e3afab396fbf1d0abe5f76173.tar.gz
 "
